# ecoplanta2

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: backend-api.md  data-analytics-eventing.md  digital-twin-3d.md  frontend-premium.md  frontend-routing-guardian.md  gh-pages-deployer.md  integrations-odoo-ego-infocasa.md  program-manager.md  qa-ci-gatekeeper.md  repo-bootstrapper.md  security-compliance.md  static-data-generator.md
.github/workflows/: pages.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  deploy.py  fabric.py  factory.py  frameworks.py  health.py  intelligence.py  materials.py  ml.py  partners.py  patents.py  sales.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: common.py  deploy.py  factory.py  intelligence.py  materials.py  modules.py  partners.py  sales.py
backend/app/seed/: generator.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py
backend/tests/unit/: test_enterprise.py  test_health.py  test_modules.py  test_phases345.py  test_seed.py
docs/: architecture.md  data.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/api/: deploy.json  fabric-scene.json  fabric.json  frameworks.json  health.json  intelligence.json  partners.json  sales.json
frontend/src/: App.tsx  main.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AllocationView.tsx  AnomalyChart.tsx  DataTable.tsx  (+18 more)
scripts/: dev.sh  generate_static_api.py  verify.sh
(+7 files in other folders)
